force-app/main/default/objects/Case/fields/Case_Last_Opened__c.field-meta.xml
<CustomField>
    <fullName>Case_Last_Opened__c</fullName>
    <label>Case Last Opened</label>
    <type>Date</type>
</CustomField>