force-app/main/default/objects/Case/fields/CaseConnected__c.field-meta.xml
<CustomField>
    <fullName>CaseConnected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CaseConnected</label>
    <type>Checkbox</type>
</CustomField>