force-app/main/default/objects/Case/fields/CaseName__c.field-meta.xml
<CustomField>
    <fullName>CaseName__c</fullName>
    <label>CaseName</label>
    <length>10</length>
    <type>Text</type>
</CustomField>